--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
   <title>Pokemon API</title>
 </head>
 <body>
+ 
+
   <div class="container">
+  
     <h1>Información de Pokémon</h1>
     <div class="pokemon-form">
       <select id="pokemon-select">
-        <option value="bulbasaur">Bulbasaur</option>
+        <!-- <option value="bulbasaur">Bulbasaur</option>
         <option value="charmander">Charmander</option>
-        <option value="squirtle">Squirtle</option>
+        <option value="squirtle">Squirtle</option> -->
       </select>
       <button id="get-pokemon">Obtener Información</button>
+      <div id="container-description">
+
+      </div>
     </div>
     
+   
   </div>
   <script src="./js/script.js"></script>
 </body>
